--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -7,13 +7,13 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
     android:layout_marginEnd="10dp"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="5dp"
     app:cardElevation="0dp"
     app:strokeWidth="0.3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingStart="16dp"
         android:paddingTop="12dp"
         android:paddingEnd="12dp"
@@ -21,28 +21,29 @@
 
         <TextView
             android:id="@+id/tvRepoName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:ellipsize="end"
-            android:fontFamily="bold"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:text="Name"
-            android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textColor="@color/design_default_color_primary"
+            android:textSize="@dimen/text_16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tvRepoDescription"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/ratingBar"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imAvatar" />
 
         <TextView
             android:id="@+id/tvRepoDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="15dp"
             android:ellipsize="end"
             android:maxLines="10"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="@id/end_guideline"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/start_guideline"
             app:layout_constraintTop_toBottomOf="@id/tvRepoName" />
@@ -51,17 +52,16 @@
             android:id="@+id/imAvatar"
             android:layout_width="71dp"
             android:layout_height="80dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/start_guideline"
-            app:layout_constraintTop_toBottomOf="@+id/tvRepoDescription"
+            app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="User"
+            android:layout_marginStart="13dp"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/imAvatar"
             app:layout_constraintStart_toEndOf="@+id/imAvatar"
             app:layout_constraintTop_toTopOf="@+id/imAvatar" />
@@ -71,9 +71,9 @@
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@+id/imAvatar"
+            app:layout_constraintBottom_toBottomOf="@+id/tvRepoName"
             app:layout_constraintEnd_toEndOf="@id/end_guideline"
-            app:layout_constraintTop_toTopOf="@+id/imAvatar" />
+            app:layout_constraintTop_toTopOf="@+id/tvRepoName" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/start_guideline"
